--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,30 @@ a {
 .logo:hover {
   width: 110%;
 }
+
+main.container {
+  background-image: url("/img/pexels-cottonbro-5474031.jpg");
+  width: 100%;
+  height: 45rem;
+}
+
+.hero {
+  width: 100%;
+  height: 45rem;
+  border: 1px solid blue;
+}
+
+.cta {
+  display: flex;
+  width: 50%;
+  height: 50%;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid green;
+  margin: 12.5% 25%;
+}
+
+#js-rotating {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 3rem;
+}
