--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ a {
 main.container {
   background-image: url("/img/pexels-cottonbro-5474031.jpg");
   width: 100%;
-  height: 45rem;
+  height: 100%;
 }
 
 .hero {
