--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,8 @@ a {
 main.container {
   background-image: url("/img/pexels-cottonbro-5474031.jpg");
   width: 100%;
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .hero {
