--- a/css/style.css
+++ b/css/style.css
@@ -131,8 +131,7 @@ main.container {
   height: 50%;
   justify-content: center;
   align-items: center;
-
-  margin: 12.5% 25%;
+  margin: 20% 25% 7.5% 25%;
   background: rgb(177, 208, 173, 0.3);
 }
 
